Added small ui adjustments

--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -2,7 +2,7 @@
   <div class="flex-none">
     {% if not flag %}
     <p class="text-subtle-white text-sm font-medium">
-      STUDY ROOM (@{{ user.username }})
+      STUDY ROOM (by @{{ user.username }})
     </p>
     {% else %}
     <p class="text-subtle-white text-sm font-medium">STUDY ROOM</p>
