--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
           alt="Image not loaded"
           class="w-11 h-11 mr-3"
         />
-        <p class="font-bold text-xl text-[#D8DAE8]">brainwave</p>
+        <p class="font-bold text-[22px] text-[#D8DAE8]">brainwave</p>
       </div>
     </a>
   </div>
