--- a/base/templates/base/login_form.html
+++ b/base/templates/base/login_form.html
@@ -2,7 +2,7 @@
 {% if page == 'login' %}
 <div class="flex justify-center my-[5%]">
   <div class="bg-theme-secondary w-[300px] px-5 py-5 rounded-lg text-sm text-subtle-white font-semibold">
-    <h2 class="text-subtle-white text-xl font-bold mb-5">Login to brainwave</h2>
+    <h2 class="text-orange-400 text-xl font-bold mb-5">Login to brainwave</h2>
     <form method="POST">
       {% csrf_token %}
       <div class="my-3">
@@ -24,7 +24,7 @@
       {% endif %}
       <div class="text-center">
         <input
-          class="text-subtle-white text-sm bg-orange-500 rounded my-3 w-full h-[35px]"
+          class="text-subtle-white text-sm bg-orange-500 rounded my-3 w-full hover:bg-orange-500/75 h-[35px]"
           type="submit"
           value="Login"
         />
@@ -36,7 +36,7 @@
 {% else %}
 <div class="flex justify-center my-[4%]">
   <div class="bg-theme-secondary w-[300px] px-5 py-5 rounded-lg text-sm text-subtle-white font-semibold">
-    <h2 class="text-subtle-white text-xl font-bold mb-1">Join the brainwave</h2>
+    <h2 class="text-orange-400 text-xl font-bold mb-1">Join the brainwave</h2>
     <p class="font-medium mb-5">Create your account now</p>
     <form method="POST">
       {% csrf_token %} 
@@ -65,8 +65,8 @@
       {% else %}
       <div class="text-[13px] my-2 font-semibold text-subtle-white">*Password must be atleast 8 characters</div>
       {% endif %}
-      <div>
-        <input type="submit" value="Sign up" class="text-subtle-white text-sm bg-orange-500 rounded my-3 w-full h-[35px]" />
+      <div class="text-center">
+        <input type="submit" value="Sign up" class="text-subtle-white text-sm bg-orange-500 rounded my-3 w-full hover:bg-orange-500/75 h-[35px]" />
         <p class="mt-4">Already have an account? <a href="{% url 'login' %}" class="text-orange-400 text-sm font-light hover:underline">Login</a></p>
       </div>
     </form>
