--- a/base/templates/base/activity_log_component.html
+++ b/base/templates/base/activity_log_component.html
@@ -2,7 +2,7 @@
   <p
     class="text-xs font-bold px-3 py-2 text-subtle-white tracking-wide bg-light-lavender"
   >
-    {% if flag %} RECENT ACTIVITIES - ALL {% else %} RECENT ACTIVITIES -
+    {% if flag %} RECENT ACTIVITIES {% else %} RECENT ACTIVITIES by
     @{{user.username}} {% endif %}
   </p>
   <div class="py-1">
