--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -702,6 +702,11 @@ video {
   margin-bottom: 5%;
 }
 
+.mx-1{
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
 .mb-1{
   margin-bottom: 0.25rem;
 }
@@ -788,6 +793,10 @@ video {
 
 .mr-1{
   margin-right: 0.25rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
 }
 
 .block{
@@ -884,6 +893,10 @@ video {
   height: 1.75rem;
 }
 
+.h-4{
+  height: 1rem;
+}
+
 .w-11{
   width: 2.75rem;
 }
@@ -958,6 +971,10 @@ video {
 
 .w-8{
   width: 2rem;
+}
+
+.w-4{
+  width: 1rem;
 }
 
 .min-w-\[20px\]{
@@ -1150,6 +1167,11 @@ video {
   background-color: rgb(0 0 0 / 0.25);
 }
 
+.bg-orange-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-20{
   --tw-bg-opacity: 0.2;
 }
@@ -1306,6 +1328,10 @@ video {
   font-weight: 600;
 }
 
+.font-thin{
+  font-weight: 100;
+}
+
 .leading-5{
   line-height: 1.25rem;
 }
@@ -1370,6 +1396,25 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-black\/50{
+  color: rgb(0 0 0 / 0.5);
+}
+
+.text-theme-primary{
+  --tw-text-opacity: 1;
+  color: rgb(44 45 56 / var(--tw-text-opacity));
+}
+
+.text-theme-secondary{
+  --tw-text-opacity: 1;
+  color: rgb(63 64 84 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1478,6 +1523,10 @@ video {
   opacity: 1;
 }
 
+.hover\:ml-2:hover{
+  margin-left: 0.5rem;
+}
+
 .hover\:size-5:hover{
   width: 1.25rem;
   height: 1.25rem;
@@ -1485,6 +1534,10 @@ video {
 
 .hover\:h-8:hover{
   height: 2rem;
+}
+
+.hover\:h-12:hover{
+  height: 3rem;
 }
 
 .hover\:w-40:hover{
@@ -1499,10 +1552,40 @@ video {
   width: 2rem;
 }
 
+.hover\:w-\[200px\]:hover{
+  width: 200px;
+}
+
+.hover\:w-\[150px\]:hover{
+  width: 150px;
+}
+
+.hover\:w-\[120px\]:hover{
+  width: 120px;
+}
+
+.hover\:w-\[130px\]:hover{
+  width: 130px;
+}
+
+.hover\:w-\[140px\]:hover{
+  width: 140px;
+}
+
 .hover\:scale-\[1\.01\]:hover{
   --tw-scale-x: 1.01;
   --tw-scale-y: 1.01;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-\[1\.02\]:hover{
+  --tw-scale-x: 1.02;
+  --tw-scale-y: 1.02;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:rounded:hover{
+  border-radius: 0.25rem;
 }
 
 .hover\:bg-black\/25:hover{
@@ -1511,6 +1594,25 @@ video {
 
 .hover\:bg-black\/\[10\%\]:hover{
   background-color: rgb(0 0 0 / 10%);
+}
+
+.hover\:bg-orange-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-orange-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-orange-400:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-orange-500\/75:hover{
+  background-color: rgb(249 115 22 / 0.75);
 }
 
 .hover\:text-orange-400:hover{
