--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
 
   <div class="flex-none mx-[5rem] w-[30rem]">
       <form method="GET" action="{% url 'home' %}">
-        <label class="flex items-center rounded gap-4 px-5 py-3 text-sm text-neutral-300 bg-[#52526D]">
+        <label class="flex items-center rounded gap-4 px-5 py-3 text-sm text-neutral-300 transition-transform duration-300 bg-[#52526D]">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-5 text-subtle-white/50">
             <path fill-rule="evenodd" d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z" clip-rule="evenodd" />
           </svg>
